[gd_scene load_steps=3 format=3 uid="uid://rtittoiwluex"]

[ext_resource type="Script" uid="uid://burb3yyrxvcw7" path="res://scripts/menus/game_over_menu.gd" id="1_7ldfy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijdig"]
bg_color = Color(0.94902, 0.929412, 0.854902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_7ldfy")

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -110.0
offset_right = 200.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ijdig")

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WinLabel" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Acabou"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Button" parent="GameOverPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Menus"
theme_override_font_sizes/font_size = 30
text = "NOVO JOGO"

[node name="Return" type="Button" parent="GameOverPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Menus"
theme_override_font_sizes/font_size = 30
text = "P√ÅGINA INICIAL"

[connection signal="pressed" from="GameOverPanel/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOverPanel/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
